<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RegisterScreenActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/abRegister"
            android:layout_width="match_parent"
            android:layout_height="@dimen/appBarTitleHeight"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/AppBarStyle">

            <TextView
                android:id="@+id/abRestauranteTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_bar_title"
                style="@style/AppBarTitle"/>

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilRegisterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintName"
            android:layout_marginTop="33dp"
            app:layout_constraintTop_toBottomOf="@+id/abRegister"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tilRegisterEmail"
            style="@style/TextInputLayoutDefault">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRegisterName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                style="@style/EditTextDefault"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilRegisterEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintEmail"
            android:layout_marginTop="33dp"
            app:layout_constraintTop_toBottomOf="@+id/tilRegisterName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tilRegisterPassword"
            style="@style/TextInputLayoutDefault">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRegisterEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                style="@style/EditTextDefault"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilRegisterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintPassword"
            android:layout_marginTop="33dp"
            app:layout_constraintTop_toBottomOf="@+id/tilRegisterEmail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tilRegisterRePassword"
            style="@style/TextInputLayoutDefault">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRegisterPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                style="@style/EditTextDefault"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilRegisterRePassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintEmail"
            android:layout_marginTop="33dp"
            app:layout_constraintTop_toBottomOf="@+id/tilRegisterPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            style="@style/TextInputLayoutDefault">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRegisterRePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                style="@style/EditTextDefault"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btRegisterRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_register"
            app:layout_constraintTop_toBottomOf="@id/tilRegisterRePassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="67dp"
            app:layout_constraintVertical_bias="1.0"
            style="@style/SaveButton"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>